# build-bonanza

./: .gitignore  aarch64.ini  cross.ini  meson.build
crates/: Cargo.toml  meson.build
crates/rslib/src/: lib.rs
src/: lib.c  lib.rs  main.c
src/include/: lib.h
src/rslib/: Cargo.toml
src/rslib/src/: lib.rs
tests/: check_lib.c
